blog posts working

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{title}}</title>
+    <title>Blog</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script src="app.js"></script>
   </head>
   <body>
     {{{body}}}
