--- a/views/post/new.hbs
+++ b/views/post/new.hbs
@@ -1,10 +1,19 @@
 <h1>New Post</h1>
-
-<form class="" action="/post" method="post">
-  <div class="">
-    <input type="text" name="post_name" value="">
-
-  </div>
-  <input type="submit">
-
-</form>
+<nav>
+    <a href="/index">Home</a>
+    <a href="/about">About</a>
+    <a href="/contact">Contact</a>
+    <a href="/logout">Log Out</a>
+</nav>
+  <form action="/" method="post">
+    <h1>Add A Post</h1>
+      <label for="title">Title</label><br>
+        <input type="text" autofocus name="title" id="title"><br>
+      <label for="pictureurl">Picture URL</label><br>
+        <input type="text" name="pictureurl" id="pictureurl"><br>
+      <label for="content">Content</label><br>
+        <textarea name="content" id="content" cols="30" rows="1"></textarea><br>
+      <label for="excerpt">Excerpt</label><br>
+        <textarea name="excerpt" id="excerpt" cols="30" rows="1"></textarea><br>
+      <input type="submit" value="POST" class="formbutton button">
+  </form>
